Terraform/modules/FULLVPCSETUP_using_modules/modules/securitygroups/main.tf
resource "aws_security_group" "sg" {
  vpc_id = var.vpc_id
  name = var.sgname
  tags = {
    Name = var.sgname
  }
ingress{
    from_port =22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
ingress{
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
ingress{
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
egress{
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}
}

output "sgnameo" {
  value = var.sgname
}
